<resources>
    <string name="app_name">Starfinder Open Reference</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="LOGIN_PREFS">edu.tacoma.uw.ryandon.starfinderopenreference.PREFS</string>
    <string name="LOGGEDIN" value="false">loggedin</string>
    <string name="action_logout">Sign Out</string>
    <string name="invalid_pwd">Enter valid password (at least 6 characters)</string>

    <string name="open_game_license">OGL</string>
    <string name="reference_open_starfinder_search">resourse_open_starfinder_search</string>
    <string name="reference_open_sf_search_hint">refernce_open_sf_search_hint</string>
    <string name="StarfinderOpenReference">Starfinder Open Reference</string>
    <string name="action_ogl">OGL</string>
    <string name="title_filter">Choose Spell Filters</string>
    <string name="text_spell_level">Level</string>
    <string name="text_spell_school">School</string>
    <string name="text_spell_class">Class</string>
    <string name="text_spell_range">Range</string>
    <string name="text_spell_cast_time">Cast Time</string>
    <string name="text_spell_source">Sources</string>
    <string name="button_search">Search</string>
    <string name="checkbox_level0">Level 0</string>
    <string name="checkbox_level1">Level 1</string>
    <string name="checkbox_level2">Level 2</string>
    <string name="checkbox_level3">Level 3</string>
    <string name="checkbox_level4">Level 4</string>
    <string name="checkbox_level5">Level 5</string>
    <string name="checkbox_level6">Level 6</string>
    <string name="checkbox_class_mystic">Mystic</string>
    <string name="checkbox_class_technomancer">Technomancer</string>
    <string name="checkbox_school_abj">Abjuration</string>
    <string name="checkbox_school_conj">Conjuration</string>
    <string name="checkbox_school_div">Divination</string>
    <string name="checkbox_school_ench">Enchantment</string>
    <string name="checkbox_school_evoc">Evocation</string>
    <string name="checkbox_school_illu">Illusion</string>
    <string name="checkbox_school_nec">Necromancy</string>
    <string name="checkbox_school_trans">Transmutation</string>
    <string name="checkbox_range_personal">Personal</string>
    <string name="checkbox_range_touch">Touch</string>
    <string name="checkbox_range_close">Close</string>
    <string name="checkbox_range_medium">Medium</string>
    <string name="checkbox_range_long">Long</string>
    <string name="checkbox_range_planetary">Planetary</string>
    <string name="checkbox_range_system">System-Wide</string>
    <string name="checkbox_range_plane">Plane</string>
    <string name="checkbox_cast_time_stdact">1 Standard Action</string>
    <string name="checkbox_cast_time_1min">1 Minute</string>
    <string name="checkbox_cast_time_10min">10 Minutes+</string>
    <string name="checkbox_sources_crb">Core</string>

    <string name="enter_member_id_hint">add menu id</string>
    <string name="enter_member_first_name_hint">enter first name</string>
    <string name="enter_member_last_name_hint">enter last name</string>
    <string name="enter_member_username_hint">enter username</string>
    <string name="enter_member_pwd_hint">enter a password</string>
    <string name="enter_member_email_hint">enter an email</string>
    <string name="member_add_course_btn">Create Account</string>
    <string name="member_add__btn">Create Account</string>
    <string name="title_spell_list">Spells</string>
    <string name="title_spell_detail">Spell Detail</string>

</resources>