<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/level_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight=".5"
    tools:context=".filters.LevelFilterFragment">

    <CheckBox
        android:id="@+id/checkbox_lvl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkbox_level1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_lvl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/checkbox_level2"
        app:layout_constraintEnd_toStartOf="@+id/checkbox_lvl_3"
        app:layout_constraintStart_toEndOf="@+id/checkbox_lvl_1"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_lvl_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/checkbox_level3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_lvl_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkbox_level4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_lvl_1" />

    <CheckBox
        android:id="@+id/checkbox_lvl_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkbox_level5"
        app:layout_constraintEnd_toStartOf="@+id/checkbox_lvl_6"
        app:layout_constraintStart_toEndOf="@+id/checkbox_lvl_4"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_lvl_2" />

    <CheckBox
        android:id="@+id/checkbox_lvl_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/checkbox_level6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_lvl_3" />
</androidx.constraintlayout.widget.ConstraintLayout>